--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,63 @@
-# AWS credentials - NEVER commit these!
-.aws/
-*.pem
-*.key
-
-# Environment files
-.env
-.env.local
-
-# OS files
-.DS_Store
-Thumbs.db
-
-# IDE files
-.vscode/
-.idea/
-*.swp
-*.swo
-
 # Python
 __pycache__/
 *.py[cod]
 *$py.class
-venv/
+*.so
 .Python
+env/
+venv/
+ENV/
+.venv
+*.egg-info/
+
+# AWS
+.aws/
+*.pem
+*.ppk
 
 # Terraform
 *.tfstate
 *.tfstate.*
 .terraform/
+*.tfvars
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+.DS_Store
+
+# Environment
+.env
+.env.local
+.env.*.local
+
+# Logs
+*.log
+logs/
+
+# Testing
+.coverage
+htmlcov/
+.pytest_cache/
+.tox/
+
+# Build
+build/
+dist/
+*.egg-info/
+
+# Demo content
+demo/*.mp4
+demo/*.mov
+
+# Sensitive data
+*-credentials.json
+*-secrets.yaml
+config/production/*
+EOF < /dev/null
